--- a/src/components/Carousel.css
+++ b/src/components/Carousel.css
@@ -111,8 +111,7 @@
 .dot{
     height: 1rem;
     width: 1rem;
-    font-size: 1rem;
-    margin: 10px 7px;
+    margin: 8px;
     background-color: #bbb;
     border-radius: 50%;
     display: inline-block;
