--- a/src/components/Project.css
+++ b/src/components/Project.css
@@ -2,18 +2,13 @@
     width: 100%;
     margin: 100px auto;
 }
-    .project-container .header{
-        display: flex;
-        flex-direction: row;
-        align-items: center;
-        justify-content: flex-start;
-        flex-wrap: wrap;
-    }
-    .project-container .description{
-        align-items: flex-start;
-        white-space: pre-line;
-        margin-top: 20px;
-    }
-        .project-container .description p{
-            margin: 10px;
-        }
+.project-container .header{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: flex-start;
+    flex-wrap: wrap;
+}
+.project-container .description{
+    margin: 80px 0;
+}
