--- a/src/components/TryItButton.css
+++ b/src/components/TryItButton.css
@@ -1,12 +1,16 @@
 .try-it-button{
+    display: block;
+    width: fit-content;
+    text-align: center;
+    margin: 30px auto;
     text-decoration: none;
     font-size: 1rem;
     font-weight: 600;
     background-color: var(--blue3);
     color: white;
-    padding: 10px 20px;
-    margin: 30px auto;
+    padding: 10px 20px;    
     border-radius: 3px;
+    
 }
 .try-it-button:hover{
     filter: brightness(1.2);
