--- a/src/components/Expander.css
+++ b/src/components/Expander.css
@@ -12,7 +12,6 @@
         font-size: 1.1rem;
         font-weight: 600;
         border-radius: 5px 5px 0px 0px;
-        cursor: pointer;
         user-select: none;
         box-sizing: border-box;
 
@@ -31,13 +30,13 @@
             font-weight: 700;
             margin: 0 10px;
             padding-bottom: 7px;
+            text-decoration: none;
             /* transition utan rotate för att animera tillbakavägen */
             transition-duration: var(--expander-speed);
             transition-property: transform;
         }
             .expander .header .arrow.down{
                 transform: rotate(90deg);
-                transition-duration: var(--expander-speed);
             }
 
     .expander > .details-container{
