--- a/src/App.css
+++ b/src/App.css
@@ -60,7 +60,6 @@ section{
 }
 
 /* margin sätts i App.js */
-/* Får inte ha overflow: hidden, förstör sticky navbar */
 .container{
     display: flex;
     flex-direction: column;
@@ -68,6 +67,13 @@ section{
     justify-content: stretch;
     width: var(--container-width);
     max-width: 100%;
+    border-radius: 5px;
+    /* 
+        contain istället för overflow:hidden
+        https://stackoverflow.com/questions/43909940/why-does-overflowhidden-prevent-positionsticky-from-working 
+        https://developer.mozilla.org/en-US/docs/Web/CSS/contain        
+    */
+    contain: paint;
     transition: var(--container-transition-speed); 
 }
     .container .content{
