--- a/src/App.css
+++ b/src/App.css
@@ -39,6 +39,7 @@ h2{
     color: var(--blue2);
     font-size: 1.7rem;
     text-align: center;
+    margin: 0;
 }
 h3{
     font-size: 1.5rem;
@@ -50,13 +51,10 @@ h4{
 hr{
     width: 100%;
     height: 1px;
-    margin-top: 30px;
+    margin: 100px 0;
     background: var(--blue3);
     background: linear-gradient(90deg, rgba(0,0,0,0) 0%, var(--blue3) 50%, rgba(0,0,0,0) 100%);
     border: none;
-}
-section{
-    margin-top: 30px;
 }
 
 /* margin sätts i App.js */
