--- a/src/components/Project.css
+++ b/src/components/Project.css
@@ -1,6 +1,5 @@
 .project-container{
     width: 100%;
-    margin: 100px auto;
 }
 .project-container .header{
     display: flex;
@@ -10,5 +9,6 @@
     flex-wrap: wrap;
 }
 .project-container .description{
-    margin: 80px 0;
+    margin-top: 20px;
+    margin-bottom: 60px;
 }
