--- a/src/views/ProjektsView.css
+++ b/src/views/ProjektsView.css
@@ -3,7 +3,8 @@
     flex-flow: row wrap;
     justify-content: space-around;
     margin-bottom: 150px;
-}    
+    margin-top: 40px;
+}
     .projects-overview a{
         text-decoration: none;
     }
