--- a/src/App.css
+++ b/src/App.css
@@ -98,7 +98,8 @@ hr{
 /* Använd ul{list-style: ;} för att byta utseende på punkterna. */
 ul{
     list-style: disc;
-    padding: 0 25px;
+    padding: 0;
+    padding-left: 25px;
     margin: 0 2px;
 }
     ul ul{list-style-type: disc;}
