--- a/src/App.css
+++ b/src/App.css
@@ -50,15 +50,10 @@ hr{
     background: linear-gradient(90deg, rgba(0,0,0,0) 0%, var(--blue3) 50%, rgba(0,0,0,0) 100%);
     border: none;
 }
-
-/* margin sätts i App.js */
-.container{
-    display: flex;
-    flex-direction: column;
-    align-items: stretch;
-    justify-content: stretch;
-    width: var(--container-width);
+#container{
+    width: 1000px;
     max-width: 100%;
+    margin: 50px auto;
     border-radius: 5px;
     /* 
         contain istället för overflow:hidden
@@ -66,21 +61,28 @@ hr{
         https://developer.mozilla.org/en-US/docs/Web/CSS/contain        
     */
     contain: paint;
-    transition: var(--container-transition-speed); 
+    transition: var(--container-transition-speed);
 }
-    .container .content{
-        background-color: white;
-        display: flex;
-        flex-direction: column;
-        align-items: stretch;
-        justify-content: stretch;
-        width: 100%;
-        padding: 30px 50px;
-        padding-bottom: 100px;
-        box-sizing: border-box;
-        overflow: hidden;
-
+    @media(max-width: 1100px){
+        #container{
+            margin-block: 0;
+            width: 100%;
+            border-radius: 0;
+        }
     }
+main{
+    z-index: 1;
+    position: relative;
+    background-color: white;
+    display: flex;
+    flex-direction: column;
+    align-items: stretch;
+    justify-content: stretch;
+    width: 100%;
+    padding: 30px 50px;
+    padding-bottom: 100px;
+    box-sizing: border-box;
+}
 
 .content-section{
     display: flex;
